--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -34,11 +34,11 @@ import Prose from './Prose.astro'
     <p>
       <strong> If you're looking to hire me and my team</strong>, send an email
       to <Link href="mailto:kyle@agath.ist">kyle@agath.ist</Link>. If you need
-      to reach me regarding something else, then my personal <Link
-        href="mailto:kyle@kyleshevlin.com"
+      to reach me regarding something else, then check the <Link
+        href="/contact"
       >
-        email
-      </Link> is the best way to do so.
+        Contact page
+      </Link> to find ways to do so.
     </p>
     <p>Enjoy your time here and thank you.</p>
   </Prose>
