--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
-import Blockquote from '../components/Blockquote.astro'
 import Content from '../components/Content.astro'
+import Link from '../components/Link.astro'
 import Marker from '../components/Marker.astro'
 import PageHeading from '../components/PageHeading.astro'
 import Prose from '../components/Prose.astro'
@@ -14,53 +14,25 @@ import Standard from '../layouts/Standard.astro'
 
       <p>
         Hello, my name is Kyle Shevlin{' '}
-        <Marker content="In case you hadn't figured that out yet" /> and I am a software
-        developer. I live and work in wonderful Portland, Oregon.
+        <Marker content="In case you hadn't figured that out yet" /> and I&apos;m
+        a software engineer, living and working in wonderful Portland, Oregon.
       </p>
 
       <p>
-        If I had to describe myself, which I <em>do</em> have to do in order to accomplish
-        the purposes of an About page, I would say that I&apos;m a simple, Midwestern
-        man who happens to be the forbidden lovechild between a Vulcan and a Viking.
-        Make of that what you will.{' '}
-        <Marker
-          content="Really, it's just a funny way to describe having AuDHD"
-        />
+        I care a lot about quality, whether it's my coding, my writing, or
+        anything else I do. I'm driven to constantly improve at my craft, and
+        I&apos;m passionate about helping others improve at theirs.
       </p>
 
       <p>
-        I have a motto that is the driving force behind my work, “With all
-        things, leave them better than you find them.” I see something that
-        could be better, I try to find a way to make it better.{' '}
-        <Marker content="You might even consider it a compulsion" />
-      </p>
-
-      <Blockquote>
-        With all things, leave them better than you find them.
-      </Blockquote>
-
-      <p>
-        I push myself pretty hard to do things well and take pride in the
-        quality of my craft. And I expect others to try and do the same.{' '}
-        <Marker
-          content="Though I'm trying to grow and be more ok with the fact that others don't share the same goal"
-        />{' '}
-        It&apos;s the Vulcan in me, I almost can&apos;t help it.
-      </p>
-
-      <p>
-        My hope with this blog is to help others improved the quality of their
-        craftshare some of the ways I&apos;ve been able to do so over the years.
-        I sincerely hope it helps.
-      </p>
-
-      <p>
-        Lastly, lest you think of me as only a software developer, let me tell
-        you a bit more of what I do in my leisure. When I&apos;m not working,
-        I'm probably working on my golf game. I play in tournaments all around
-        the Pacific Northwest and occasionally even win one once in a while. I
-        have a nascent <a href="https://kyleshevlingolf.com">golf blog</a> I'm just
-        getting started to share some of my insights into the game with others.
+        When I&apos;m not working, I&apos;m probably working on my golf game. I
+        play in tournaments all around the Pacific Northwest and occasionally
+        even win one once in a while. I have a nascent <Link
+          href="https://kyleshevlingolf.com"
+        >
+          {'golf blog'}
+        </Link> I&apos;m just getting started to share some of my insights into the
+        game with others.
       </p>
 
       <p>
