--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -26,7 +26,7 @@ const LINKS = [
 
       return (
         <a
-          class={`inline-block p-4 ${isCurrentPage && 'text-accent'} transition-colors hover:text-accent`}
+          class={`inline-block px-4 py-1 sm:py-2 ${isCurrentPage && 'text-accent'} transition-colors hover:text-accent`}
           title={title}
           href={href}
         >
