--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,9 +2,21 @@
 import BlueSky from '../icons/BlueSky.astro'
 import Github from '../icons/Github.astro'
 import Rss from '../icons/Rss.astro'
-import Container from './Container.astro'
 import Contributors from './Contributors.astro'
 import Copyright from './Copyright.astro'
+import Link from './Link.astro'
+
+const SITEMAP = [
+  { href: '/', title: 'Home' },
+  { href: '/all-posts', title: 'All Posts' },
+  { href: '/tags', title: 'Tags' },
+  { href: '/courses', title: 'Courses' },
+  { href: '/snippets', title: 'Snippets' },
+  { href: '/about', title: 'About' },
+  { href: '/contact', title: 'Contact' },
+  { href: '/impactful-resources', title: 'Impactful Resources' },
+  { href: '/ai', title: 'A.I.' },
+]
 
 const LINKS = [
   {
@@ -18,47 +30,65 @@ const LINKS = [
 ---
 
 <footer class="mt-24 bg-gray-900 py-8 text-center text-white dark:bg-gray-800">
-  <Container>
-    <div class="flex flex-col gap-8">
+  <div class="px-6 md:px-12">
+    <div class="stack gap-8 lg:gap-12">
       <div class="flex justify-center">
         <div class="max-w-[80ch]">
           <Contributors />
         </div>
       </div>
 
-      <div class="flex justify-center">
-        <a
-          class="font-sans text-accent hover:text-accent-light"
-          href="https://kyleshevlingolf.com"
-          rel="noreferrer"
-          target="_blank"
-        >
-          Looking for my golf content instead?
-        </a>
+      <div class="stack gap-2 font-sans">
+        <div class="text-lg font-bold">Sitemap</div>
+
+        <div class="row flex-wrap justify-center gap-3 lg:gap-6">
+          {
+            SITEMAP.map(item => {
+              const { href, title } = item
+
+              return <Link href={href}>{title}</Link>
+            })
+          }
+        </div>
       </div>
 
-      <div class="flex items-center justify-center">
-        {
-          LINKS.map(link => {
-            const { href, icon: Icon, title } = link
+      <div class="stack lg:row-reverse gap-4 lg:items-end lg:justify-between">
+        <div class="stack lg:row gap-4 lg:items-center lg:gap-6">
+          <div class="flex justify-center">
+            <a
+              class="font-sans text-accent hover:text-accent-light"
+              href="https://kyleshevlingolf.com"
+              rel="noreferrer"
+              target="_blank"
+            >
+              Looking for my golf content instead?
+            </a>
+          </div>
 
-            return (
-              <a
-                class="inline-block px-4 py-2 text-accent hover:text-accent-light"
-                href={href}
-                title={title}
-              >
-                <span class="sr-only">{href}</span>
-                <Icon fill="currentColor" width={30} />
-              </a>
-            )
-          })
-        }
-      </div>
+          <div class="flex items-center justify-center lg:-mr-2">
+            {
+              LINKS.map(link => {
+                const { href, icon: Icon, title } = link
 
-      <div class="font-sans">
-        <Copyright /> Kyle Shevlin. All Rights Reserved.
+                return (
+                  <a
+                    class="inline-block px-2 py-2 text-accent hover:text-accent-light"
+                    href={href}
+                    title={title}
+                  >
+                    <span class="sr-only">{href}</span>
+                    <Icon fill="currentColor" width={24} />
+                  </a>
+                )
+              })
+            }
+          </div>
+        </div>
+
+        <div class="font-sans">
+          <Copyright /> Kyle Shevlin. All Rights Reserved.
+        </div>
       </div>
     </div>
-  </Container>
+  </div>
 </footer>
