--- a/src/components/SelectedTags.astro
+++ b/src/components/SelectedTags.astro
@@ -10,7 +10,10 @@ const TAGS = [
 <section class="flex flex-col gap-6">
   <h3 class="font-sans text-2xl">Unsure where to start?</h3>
 
-  <p>Try a post in one of these tagged collections.</p>
+  <p>
+    I've written a lot of posts! I've chosen a few tagged collections that would
+    be good places to start&nbsp;reading.
+  </p>
 
   <div class="flex grid-cols-2 grid-rows-2 flex-col gap-4 xs:grid">
     {
