--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -8,12 +8,11 @@ import Prose from './Prose.astro'
     <p class="font-sans text-3xl font-bold">
       Hi, I'm Kyle Shevlin, founder and lead software engineer of{' '}
       <Link external href="https://agath.ist">Agathist</Link>, a software
-      development firm that specializes in web &amp; mobile applications built
-      with <Link external href="https://react.dev">React</Link>, <Link
+      consultancy that specializes in web applications built with <Link
         external
-        href="https://reactnative.dev"
+        href="https://react.dev"
       >
-        React Native
+        React
       </Link>, <Link external href="https://astro.build">Astro</Link> and <Link
         external
         href="https://typescriptlang.org"
@@ -37,7 +36,7 @@ import Prose from './Prose.astro'
       to reach me regarding something else, then check the <Link
         href="/contact"
       >
-        Contact page
+        {'Contact page'}
       </Link> to find ways to do so.
     </p>
     <p>Enjoy your time here and thank you.</p>
