adjust some shadows

--- a/src/components/Agathist.astro
+++ b/src/components/Agathist.astro
@@ -3,7 +3,7 @@ import ShiftBy from './ShiftBy.astro'
 ---
 
 <a
-  class="group block rounded border-2 border-pink-500 bg-gray-100 p-4 text-center shadow dark:bg-slate-800"
+  class="group block rounded border-2 border-pink-500 bg-gray-100 p-4 text-center shadow-md dark:bg-slate-800"
   href="https://agath.ist"
   rel="noreferrer"
   target="_blank"
