--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,7 +20,7 @@ const SITEMAP = [
 
 const LINKS = [
   {
-    href: 'https://bsky.app/profile/kyleshevlin.com',
+    href: 'https://bsky.app/profile/kyleshevl.in',
     icon: BlueSky,
     title: 'BlueSky',
   },
