tweaks, most notably to accent color

--- a/src/components/Agathist.astro
+++ b/src/components/Agathist.astro
@@ -20,7 +20,7 @@ import ShiftBy from './ShiftBy.astro'
         <span>Good software by good people.</span>
       </div>
 
-      <div class="mt-2 font-sans">
+      <div class="font-sans">
         Visit <span
           class="underline transition-colors group-hover:text-pink-500"
           >https://agath.ist</span
