--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,4 +1,6 @@
 ---
+import { clsx } from 'clsx'
+
 const { pathname } = new URL(Astro.request.url)
 
 const LINKS = [
@@ -19,6 +21,7 @@ const LINKS = [
 }))
 ---
 
+{/* -ml-4 accounts for the px-3 on the link and the px-1 on the text */}
 <nav class="-ml-4 font-sans">
   {
     LINKS.map(link => {
@@ -26,11 +29,18 @@ const LINKS = [
 
       return (
         <a
-          class={`inline-block px-4 py-1 sm:py-2 ${isCurrentPage && 'text-accent'} transition-colors hover:text-accent`}
-          title={title}
+          class={`group inline-block px-3 py-1 sm:py-2`}
           href={href}
+          title={title}
         >
-          {title}
+          <span
+            class={clsx(
+              'inline-block px-1 transition-colors group-hover:bg-accent group-hover:text-white',
+              isCurrentPage && 'text-accent',
+            )}
+          >
+            {title}
+          </span>
         </a>
       )
     })
