--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -35,8 +35,8 @@ const LINKS = [
         >
           <span
             class={clsx(
-              'inline-block px-1 transition-colors group-hover:bg-accent group-hover:text-white',
-              isCurrentPage && 'text-accent',
+              'inline-block px-1 text-accent transition-colors group-hover:bg-accent group-hover:text-white',
+              isCurrentPage && 'font-bold',
             )}
           >
             {title}
