--- a/src/components/SelectedTags.astro
+++ b/src/components/SelectedTags.astro
@@ -11,8 +11,9 @@ const TAGS = [
   <h3 class="font-sans text-2xl">Unsure where to start?</h3>
 
   <p>
-    I've written a lot of posts! I've chosen a few tagged collections that would
-    be good places to start&nbsp;reading.
+    I've written a lot of posts over the years! Here are a few collections I
+    have hand-selected as good starting points to my writing. Click one to see
+    all the posts in that&nbsp;category.
   </p>
 
   <div class="flex grid-cols-2 grid-rows-2 flex-col gap-4 xs:grid">
