update ART page

--- a/src/pages/art.astro
+++ b/src/pages/art.astro
@@ -12,33 +12,38 @@ import Standard from '../layouts/Standard.astro'
 >
   <Content>
     <Prose>
-      <PageHeading>A.R.T.</PageHeading>
+      <div>
+        <PageHeading>A.R.T.</PageHeading>
+        <div class="font-sans font-bold">aka Another Routine Thursday</div>
+      </div>
+
+      <p>
+        <strong>TL;DR;</strong> You're invited to join my Thursday evening routine
+        of hanging out at the local&nbsp;pub.
+      </p>
+
+      <hr />
 
       <p>As someone with AuDHD, I often have competing needs and desires.</p>
 
       <p>
-        My ADHD craves the stimulation of a good social hang, but hates the work
-        of planning ahead for it. Not to mention the additional sting due to
-        rejection sensitivity dysphoria when people turn down an invitation.
+        On the one hand, my ADHD craves the stimulation of a good social hang,
+        but hates the work of planning ahead for it. My ADHD isn't a big fan of
+        getting my invitations turned down either. Thanks rejection sensitivity
+        dysphoria!
       </p>
 
       <p>
-        My autism craves routine over planning, too. I don't want to make a
-        bunch of decisions. I just want to know I'm going to roughly the same
-        place, at the same time, doing something I want to do.
+        On the other hand, my autism craves routine and gets tired of trying to
+        make all the decisions involved with planning. I just want to know I'm
+        going to roughly the same place, at the same time, doing something I
+        want to do.
       </p>
 
       <p>
-        And it just so happens I have pretty much every Thursday night free to
-        myself.
-      </p>
-
-      <p>
-        One way for me to encompass all these concerns of mine is to establish a
-        routine of going to a place to hang, and making it an open invitation to
-        anyone that wants to join me. Hence, <strong
-          >Another Routine Thursday</strong
-        >, aka A.R.T.
+        Considering those factors, the answer seems pretty obvious: start a new
+        social routine. And thus, <strong>Another Routine Thursday</strong>, aka
+        A.R.T., is born.
       </p>
 
       <p>
