--- a/src/components/PostH4.astro
+++ b/src/components/PostH4.astro
@@ -1,3 +1,7 @@
-<h3 class="mt-4 font-sans text-xl">
+---
+const props = Astro.props
+---
+
+<h3 class="mt-4 font-sans text-xl" {...props}>
   <slot />
 </h3>
