--- a/src/pages/impactful-resources.astro
+++ b/src/pages/impactful-resources.astro
@@ -96,7 +96,7 @@ import Standard from '../layouts/Standard.astro'
           <p>
             I highly recommend reading this book. As someone who's had to "swap
             an engine out while flying the plane" several times in my career,
-            this book was essentially for being able to do that confidently and
+            this book was essential for being able to do that work confidently and
             safely.
           </p>
         </ResourceItem>
